--- a/Third project/style.css
+++ b/Third project/style.css
@@ -1,12 +1,4 @@
 p {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    color:blue;
-}
-
-p > b {
-    color: green;
-}
-
-p > i {
-    color: red;
+    font-size: 25px;
 }
